--- a/frogfs_example.yaml
+++ b/frogfs_example.yaml
@@ -30,6 +30,15 @@ filter:
         ext: br
     - no compress
 
+# Optional: install extra Python deps into venv for mkfrogfs
+# python_packages:
+#   - heatshrink2>=0.10.0
+# Or:
+# python:
+#   requirements: tools/frogfs-extra-requirements.txt
+#   packages:
+#     - heatshrink2
+
   '*.js':
     - gzip
     - rename
