Remove support for nested `python:` section and keep only toplevel `python_requirements` and `python_packages` keys, to align with existing YAML conventions.

--- a/frogfs_example.yaml
+++ b/frogfs_example.yaml
@@ -31,13 +31,10 @@ filter:
     - no compress
 
 # Optional: install extra Python deps into venv for mkfrogfs
+# python_requirements:
+#   - tools/frogfs-extra-requirements.txt
 # python_packages:
-#   - heatshrink2>=0.10.0
-# Or:
-# python:
-#   requirements: tools/frogfs-extra-requirements.txt
-#   packages:
-#     - heatshrink2
+#   - heatshrink2>=0.13.0
 
   '*.js':
     - gzip
