Make FrogFS standalone builds self‑contained (#69)
* Extra Python dependencies

* bugfix

* Remove support for nested `python:` section and keep only
toplevel `python_requirements` and `python_packages` keys,
to align with existing YAML conventions.

--- a/frogfs_example.yaml
+++ b/frogfs_example.yaml
@@ -30,6 +30,12 @@ filter:
         ext: br
     - no compress
 
+# Optional: install extra Python deps into venv for mkfrogfs
+# python_requirements:
+#   - tools/frogfs-extra-requirements.txt
+# python_packages:
+#   - heatshrink2>=0.13.0
+
   '*.js':
     - gzip
     - rename
